added pading and margin

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -42,6 +42,7 @@ $dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     border-bottom: 0.3px solid $light-clr;
 
     .logo {
+      padding: 1rem 0;
       font-size: 1.5rem;
       font-weight: bold;
       font-family: $ff-logo;
