added pading and margin to reusable components

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,5 +2,11 @@
   display: flex;
     .home-container {
       flex: 6;
+
+      .widgets {
+        display: flex;
+        padding: 1.25rem;
+        gap: 1.25rem;
+      }
   }
 }
