set sidebar elements' text decoration to none

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -74,6 +74,10 @@ $dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         cursor: pointer;
         transition: $transition;
 
+        a {
+          text-decoration: none;
+        }
+
         .icon {
           color: $color-indigo;
           font-size: 1.25rem;
