--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,5 +12,16 @@
       .charts {
         padding: 0.3125rem 1.25rem;
       }
+
+      .list-container {
+        margin: 1.25rem;
+        padding: 1.25rem;
+        
+        .list-title {
+          font-weight: 500;
+          color: gray;
+          margin-bottom: 0.973rem;
+        }
+      }
   }
 }
