added styles to form

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -60,6 +60,7 @@
               width: 100%;
               padding: 0.3125rem;
               border: none;
+              outline: none;
               border-bottom: 1px solid gray;
             }
           }
