increased image width and height

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -28,10 +28,10 @@
         text-align: center;
 
         img {
-          width: 6.125rem;
-          height: 6.125rem;
+          width: 8.125rem;
+          height: 8.125rem;
           border-radius: 50%;
-          object-fit: contain;
+          object-fit: cover;
         }
       }
       .right {
