--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -34,6 +34,11 @@ $dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   border-right: 0.5px solid rgb(201, 198, 198);
   min-height: 100vh;
 
+  a {
+    text-decoration: none;
+    color: rgb(206, 198, 198);
+  }
+
   .sidebar-top {
     height: 3.2rem;
     display: flex;
@@ -73,10 +78,6 @@ $dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         padding: 0.5rem;
         cursor: pointer;
         transition: $transition;
-
-        a {
-          text-decoration: none;
-        }
 
         .icon {
           color: $color-indigo;
